@@ -17,6 +17,7 @@ Released ?????? ??, ????
 - Korea updates (0xF4D3C0D3, dr-p)
 - Bulgaria updates (BasakUlker, dr-p)
 - Australia updates (cmckeague)
+- South Africa updates (lispwarez, dr-p)
 
 Version 0.11.2
 ==============
